syntax = "proto3";

package ticketquerier.v1;

import "google/protobuf/timestamp.proto";

service TicketQuerierService {
  rpc QueryTickets(QueryTicketsRequest) returns (QueryTicketsResponse) {}
  rpc GetTicketById(GetTicketByIdRequest) returns (GetTicketByIdResponse) {}
}

// ========================== Common Models ==========================

message Ticket {
  string ticket_id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string created_by = 4;
  string title = 5;
  string description = 6;
  google.protobuf.Timestamp deadline = 7;
}

// ========================== Models per API ==========================

message QueryTicketsRequest {
  string requested_by = 1;
}

message QueryTicketsResponse {
  repeated Ticket tickets = 1;
}

message GetTicketByIdRequest {
  string ticket_id = 1;
}

message GetTicketByIdResponse {
  Ticket ticket = 1;
}
