syntax = "proto3";

package todomgr.v1;

import "google/protobuf/timestamp.proto";

service TicketMgrService {
  rpc CreateTicket(CreateTicketRequest) returns (CreateTicketResponse) {}
  rpc UpdateTicket(UpdateTicketRequest) returns (UpdateTicketResponse) {}
  rpc DeleteTicket(DeleteTicketRequest) returns (DeleteTicketResponse) {}
}

// ========================== Models per API ==========================

message CreateTicketRequest {
  string requested_by = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp deadline = 4;
}

message CreateTicketResponse {
  string ticket_id = 1;
}

message UpdateTicketRequest {
  string ticket_id = 1;
  string requested_by = 2;
  optional string title = 3;
  optional string description = 4;
  google.protobuf.Timestamp deadline = 5;
}

message UpdateTicketResponse {}

message DeleteTicketRequest {
  string ticket_id = 1;
}

message DeleteTicketResponse {}
